[gd_scene load_steps=9 format=3 uid="uid://dgmjaurcfdxot"]

[ext_resource type="Script" uid="uid://dm0c868s1cd3g" path="res://scripts/main_scene.gd" id="1_w2twt"]
[ext_resource type="Script" uid="uid://m3haint30syf" path="res://scripts/main_control.gd" id="2_7ykc4"]
[ext_resource type="PackedScene" uid="uid://bbqqjhwje72mp" path="res://scenes/card.tscn" id="2_pw63i"]
[ext_resource type="Script" uid="uid://b3532c0qciydr" path="res://scripts/calender_panel.gd" id="3_pu3yx"]
[ext_resource type="Script" uid="uid://chereqjnc1nli" path="res://scripts/execute_panel.gd" id="4_gubc5"]
[ext_resource type="Script" uid="uid://c4f0atwkwa0ee" path="res://scripts/hand_panel.gd" id="4_rt2n2"]
[ext_resource type="Script" uid="uid://xbayjyo4g1fl" path="res://test/button.gd" id="7_c16ls"]
[ext_resource type="Script" uid="uid://dn8mpbwy3lp5m" path="res://scripts/card_detail_panel.gd" id="8_18nlu"]

[node name="MainScene" type="Node"]
script = ExtResource("1_w2twt")

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7ykc4")

[node name="CalenderPanel" type="Panel" parent="MainControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -475.0
offset_top = -650.0
offset_right = 625.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_pu3yx")

[node name="HandPanel" type="Panel" parent="MainControl/CalenderPanel"]
self_modulate = Color(1, 1, 1, 0.494118)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_rt2n2")

[node name="Card1" parent="MainControl/CalenderPanel/HandPanel" instance=ExtResource("2_pw63i")]
time = 1
_name = "活动牌1"
card_detail = "牌11"
type = 1

[node name="Card2" parent="MainControl/CalenderPanel/HandPanel" instance=ExtResource("2_pw63i")]
position = Vector2(200, 0)
time = 2
_name = "医疗牌2"
card_detail = "牌22"

[node name="Card3" parent="MainControl/CalenderPanel/HandPanel" instance=ExtResource("2_pw63i")]
position = Vector2(400, 0)
time = 3
_name = "活动牌3"
card_detail = "牌33"
type = 1

[node name="Card4" parent="MainControl/CalenderPanel/HandPanel" instance=ExtResource("2_pw63i")]
position = Vector2(600, 0)
time = 4
_name = "医疗牌4"
card_detail = "牌44"

[node name="Card5" parent="MainControl/CalenderPanel/HandPanel" instance=ExtResource("2_pw63i")]
position = Vector2(800, 0)
time = 5
_name = "活动牌5"
card_detail = "牌55"
type = 1

[node name="MedicalPanel" type="Panel" parent="MainControl/CalenderPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 150.0
grow_horizontal = 2
script = ExtResource("4_gubc5")

[node name="MedicalExecutePanel1" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel2" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel3" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel4" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 450.0
offset_top = -50.0
offset_right = 550.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel5" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = -50.0
offset_right = 700.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel6" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 750.0
offset_top = -50.0
offset_right = 850.0
offset_bottom = 50.0
grow_vertical = 2

[node name="MedicalExecutePanel7" type="Panel" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 900.0
offset_top = -50.0
offset_right = 1000.0
offset_bottom = 50.0
grow_vertical = 2

[node name="BoxContainer" type="Control" parent="MainControl/CalenderPanel/MedicalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActivityPanel" type="Panel" parent="MainControl/CalenderPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
script = ExtResource("4_gubc5")
type = 1

[node name="ActivityExecutePanel1" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel2" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel3" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel4" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 450.0
offset_top = -50.0
offset_right = 550.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel5" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = -50.0
offset_right = 700.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel6" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 750.0
offset_top = -50.0
offset_right = 850.0
offset_bottom = 50.0
grow_vertical = 2

[node name="ActivityExecutePanel7" type="Panel" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 900.0
offset_top = -50.0
offset_right = 1000.0
offset_bottom = 50.0
grow_vertical = 2

[node name="BoxContainer" type="Control" parent="MainControl/CalenderPanel/ActivityPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestButton" type="Button" parent="."]
offset_left = 676.0
offset_top = 178.0
offset_right = 776.0
offset_bottom = 278.0
focus_mode = 0
text = "测试：
增加一张牌"
script = ExtResource("7_c16ls")

[node name="CardDetailPanel" type="Panel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 485.0
grow_vertical = 0
script = ExtResource("8_18nlu")

[node name="CardContainer" type="Control" parent="CardDetailPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_vertical = 2

[node name="CardDetail" type="Control" parent="CardDetailPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2

[node name="CardDetailLabel" type="Label" parent="CardDetailPanel/CardDetail"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "卡牌详情"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="TestButton" to="TestButton" method="_on_button_down"]
